# clawhub

./: .env.example  .gitignore  DOCKER_STARTUP_GUIDE.md  PROJECT_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  Dockerfile.simple  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  lobsters.py  search.py  tags.py  users.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  audit.py  comment.py  lobster.py  organization.py  user.py  version.py  webhook.py
backend/app/schemas/: __init__.py  auth.py  base.py  comment.py  lobster.py  organization.py  search.py  user.py  version.py
backend/app/services/: __init__.py  lobster.py  search.py  user.py
cli/: README.md  requirements.txt  setup.py
cli/claw/: __init__.py  api.py  config.py  main.py  packager.py
cli/claw/commands/: __init__.py  init.py  list_cmd.py  login.py  logout.py  pull.py  push.py  search.py  whoami.py
cli/clawhub_cli/: __init__.py  auth.py  images.py  main.py  repos.py
frontend/: .env.example  Dockerfile  Dockerfile.simple  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.pnpm-store/v10/index/00/: cf5a43f20fad6ffa10d2d08370066382b53764c665d4797b882efcc9a6476c-vite-node@2.1.9.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
frontend/.pnpm-store/v10/index/01/: 77196fabf3ceb140504eb51e73789a92ea77f7122303508ed3564747ae3e6e-human-signals@5.0.0.json  93e62075c403286992637b69696a8d27d8ca79a45a596e0cd3c730264a1471-@vue+runtime-core@3.5.31.json
frontend/.pnpm-store/v10/index/02/: 13b9414723f2596b6c6d3d89684f536076d38275c673de2fc910995a2b4acc-globals@13.24.0.json  27d3ed011b5bd36b8b8b40c11e4cfeece906ea9f65ffb3c1a10cfd09331238-quansync@0.2.11.json  9e86d16430714fcb1ecbcbc0e3757c0417f59a7403663a63f709065f6bfc96-esquery@1.7.0.json  f6da08b38ed8eb70fe55b96e687d77f58475c0c5750a766766541f7a57f54d-yaml@2.8.3.json
frontend/.pnpm-store/v10/index/04/: b2374e5d535b73ef97bd25df2ab763ae22f9ac29c17aac181616924a8cb676-which@2.0.2.json  bae011c453c17da8ea01b118e08dc8cbc64a9df96287ee633c3d87520c4d19-balanced-match@4.0.4.json  bdac4ee1ce772d184f595889e5314f0fd032d3c10b7a669490bac64f010585-baseline-browser-mapping@2.10.13.json  c63fa334bfc718d8a9114bfad29d4690132580d34e0592a34f8026f24d8388-@vue+compiler-dom@3.5.31.json  ddb607979a30c23d50cb63ac677983978260fa423c3532d052576d8b1a4f9c-word-wrap@1.2.5.json
frontend/.pnpm-store/v10/index/05/: c987a5be5b43279536ba6d0b7521ce905907f6071c3a04444394111ae61760-@intlify+shared@10.0.8.json  d6e8cbe97bb40dce196e858f21475a43f92ee0728f54e4df72e3caad1ac72c-json-stable-stringify-without-jsonify@1.0.1.json
frontend/.pnpm-store/v10/index/06/: 1ed08d3f3f4ae29421f39b4973473522ba587a3a275b470aa26cb9a1433fb8-synckit@0.11.12.json  add2992a721476968cf93c21ff7273ab2f33c739e9d079040b56e106f0e631-ansi-regex@6.2.2.json  d8f604e38ef37a375b21f9f5ef0c817b3111055c6ab9143a9118aee6c1d2ea-detect-libc@2.1.2.json  f53c9d8806401c5c98cb84794126353beb3158c93521fb4605b6e2f5dec4de-ansi-escapes@7.3.0.json
frontend/.pnpm-store/v10/index/08/: f6cc5a550dea155925819c53f192a07bb812708788b69723d9fc73d95ae916-@volar+source-map@2.4.15.json
frontend/.pnpm-store/v10/index/09/: 0f9b10ef93bdafea966c36e1d09e8ee94ae6933356750e14e8a356881ddca4-get-east-asian-width@1.5.0.json  (+3 more)
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  index.ts  lobster.ts  search.ts  upload.ts  user.ts
frontend/src/assets/styles/: global.scss  variables.scss
frontend/src/components/common/: EmptyState.vue  LoadingState.vue  LobsterCard.vue  Pagination.vue
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue
frontend/src/components/lobster/: LobsterCard.vue  LobsterCardList.vue
frontend/src/router/: index.ts
frontend/src/stores/: lobster.ts  search.ts  theme.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: debounce.ts  format.ts  request.ts  validate.ts
frontend/src/views/error/: 404.vue
frontend/src/views/home/: index.vue
frontend/src/views/lobster/: detail.vue  list.vue
frontend/src/views/search/: index.vue  tag.vue
frontend/src/views/upload/: index.vue
frontend/src/views/user/: forgot-password.vue  login.vue  profile.vue  register.vue  settings.vue  stars.vue
nginx/: nginx.conf
project-specs/: clawhub-setup.md
scripts/: dev-start.sh  init-db.sh
(+463 files in other folders)
